[package]
name = "budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bson = "2.10.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-sync"]
