[package]
name = "budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.8.2" }
tokio = { version = "1", features = ["full"] }
bson = "2.10.0"
futures-util = "0.3.30"
axum = "0.7.5"
